<resources>
    <string name="app_name">Haunted Pizzaria</string>
    <string name="bt_play">Lets Play!</string>
    <string name="bt_login">Log-in</string>
    <string name="bt_form_cancel">Cancel</string>
    <string name="bt_form_signup">Sign-up</string>
    <string name="tv_registration">Choose a name and a number only password.\nYour name will be visible to other players in the ranking.</string>
    <string name="bt_signup">Sign-up</string>
    <string name="tv_signup">Dont have an account? Sign-up!</string>
    <string name="tv_login">Dont you have an account? Log-in!</string>
    <string name="lore_tittle">How to play</string>
    <string name="lore">A few weeks ago, the Haunted Pizzaria was shut down after a series of mysterious disappearances. The workers who used to work here all vanished without a trace, leaving only rumors behind.&#10;You, a curious and brave soul, have decided to venture into the restaurant in search of the truth. As the clock strikes midnight, the heavy doors slam shut behind you, and youre trapped inside. The restaurant is eerily silent, but you soon realize something is lurking in the shadows. The air feels cold and strange, and whispers echo through the halls. There’s only one way out—but it won’t be easy. You must explore the rooms, avoiding the terrifying monster that stalks your every move. The exit is waiting, but the clock is ticking. Will you survive until 6 AM? Or will the monster find you before you can escape? Only time will tell.</string>
    <string name="game_hour">%1$s</string>
    <string name="remaining_moves">Remaining moves: %1$d</string>
    <string name="tv_gameOver">Game over!</string>
    <string name="bt_retry">Try again</string>
    <string name="bt_ranking">See ranking</string>
    <string name="tv_victory">You won!</string>
    <string name="bt_playAgain">Play again</string>
    <string name="toast_try_again">Keep trying!</string>



</resources>