<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_color"
    android:padding="4dp"
    android:id="@+id/container_principal">

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:layout_marginEnd="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_signup"
            android:textSize="16sp"/>


        <Button
            android:id="@+id/bt_acLogin_signup"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/bt_signup"
            android:backgroundTint="@color/darker_main_color"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_top"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <EditText
                android:id="@+id/etName"
                style="@style/input_form"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:hint="Name"
                android:inputType="text" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/input_form"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:hint="Password"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_form"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/bt_login"
                android:textAlignment="center"
                android:backgroundTint="@color/success"/>

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_form_cancel"
                android:textAlignment="center"
                android:backgroundTint="@color/warning"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>